opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/samoht/gh-stats"
bug-reports:  "https://github.com/samoht/gh-stats/issues"
dev-repo:     "https://github.com/samoht/gh-stats.git"
doc:          "https://samoht.github.io/gh-stats/"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "fmt" {>= "0.8.0"}
  "re"
  "astring"
  "lwt" {>= "2.4.7"}
  "github-unix"
]
available: [ocaml-version >= "4.03.0"]
